<resources>
    <string name="app_name">Adoção de Animais</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Anunciar</string>
    <string name="title_notifications">Notificações</string>
    <string name="title_profile">Perfil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Usuário</string>
    <string name="password">Senha</string>
    <string name="register">Registrar</string>
    <string name="confirm_password">Confirmar Senha</string>
    <string name="log_out">Log Out</string>
    <string name="title">Title</string>
    <string name="animal_description">Descrição</string>
    <string name="animal_image">Animal Image</string>
    <string name="perfil">Perfil</string>
    <string name="email">Email</string>
    <string name="anunciar">Anunciar</string>
    <string name="registrar">Registrar</string>
    <string name="nome">Nome do Animal</string>
    <string name="descricao">Descrição:</string>
    <string name="animal_type">Tipo do animal</string>
    <string name="breed">Raça</string>
    <string name="age">Idade</string>
    <string name="size">Porte</string>
    <string name="contact">Contato</string>
    <string name="title_login">Login</string>
    <string name="title_resgister">Registrar</string>
    <string name="detalhes">Detalhes do Animal</string>
    <string name="animal_name">Nome:</string>
    <string name="fill_text">Example</string>
    <string name="animal_breed">Raça:</string>
    <string name="animal_age">Idade:</string>
    <string name="animal_size">Porte:</string>
    <string name="animal_contact">Contato:</string>
    <string name="back">Voltar</string>
    <string name="delete">Delete</string>
    <string name="publish_created">Anúncio Criado</string>
    <string name="error_user_not_logged">Erro Usuário Não Logado</string>
    <string name="insert_name">Insira um Nome</string>
    <string name="insert_breed">Insira uma Raça</string>
    <string name="insert_age">Insira a Idade</string>
    <string name="insert_type">Insira o Tamanho do Animal</string>
    <string name="insert_contact">Insira um Contato</string>
    <string name="image_failed">Falha ao enviar imagem</string>
    <string name="login_success">Login Concluído</string>
    <string name="insert_email">Insira um Usuário</string>
    <string name="insert_password">Insira uma Senha</string>
    <string name="valid_email">Insira um Email Válido</string>
    <string name="password_confirm">Insira a Senha Novamente</string>
    <string name="password_not_equal">As senhas Não Coincidem</string>
    <string name="password_length">A Senha Deve Conter ao Menos 8 Caracteres</string>
    <string name="register_successful">Registro Concluído</string>
    <string name="add_image">Adicionar Imagem</string>
</resources>