<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment" >

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:textSize="50sp"
        android:paddingTop="20dp"
        android:text="@string/perfil" />

    <TextView
        android:id="@+id/text_email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textSize="30sp"
        android:paddingTop="200dp"
        android:gravity="center_horizontal"
        android:text="@string/email" />

</FrameLayout>