<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.DashboardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/dashboardText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/anunciar"
            android:textSize="50sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/nome"
            app:boxBackgroundColor="#F8E9FD"
            android:layout_marginTop="20dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_animal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/descricao"
            app:boxBackgroundColor="#F8E9FD"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_description"
                android:layout_width="match_parent"
                android:layout_height="116dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:hint="@string/breed"
                app:boxBackgroundColor="#F8E9FD">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_breed"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/age"
                app:boxBackgroundColor="#F8E9FD">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_age"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:hint="@string/size"
                app:boxBackgroundColor="#F8E9FD">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_type"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/contact"
            app:boxBackgroundColor="#F8E9FD"
            android:layout_marginTop="10dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/reg_contact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/reg_photo"
            android:src="@drawable/dog"
            android:contentDescription="@string/animal_image"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_add_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adicionar Imagem"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_announce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anunciar"
            android:gravity="center_vertical"
            android:layout_marginTop="10dp"/>

    </LinearLayout>
</FrameLayout>