<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="#B1C1AEE1"
    app:cardElevation="3dp"
    android:layout_marginTop="10dp"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    app:cardPreventCornerOverlap="true">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/animal_image"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:src="@drawable/dog"
            android:contentDescription="@string/animal_image"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="14dp">
            
            <TextView
                android:id="@+id/animal_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textAppearance="?attr/textAppearanceHeadline6"/>

            <TextView
                android:id="@+id/animal_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/animal_description"
                android:textAppearance="?attr/textAppearanceBody2"/>
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>